Вроде юы тесты на создание и удаление как-то работают.

--- a/data/project.json
+++ b/data/project.json
@@ -1,18 +1,18 @@
 [
   {
     "py/object": "model.project.Project",
-    "description": "descok/",
+    "description": "descW8-t",
     "id": null,
-    "name": "name K9nG(W",
-    "status": "release",
-    "view_state": "private"
+    "name": "namee]",
+    "status": "obsolete",
+    "view_state": "public"
   },
   {
     "py/object": "model.project.Project",
-    "description": "descN h.CD; ",
+    "description": "desc",
     "id": null,
-    "name": "name",
-    "status": "release",
-    "view_state": "public"
+    "name": "namedo&~:0S7",
+    "status": "obsolete",
+    "view_state": "private"
   }
 ]
